# automated

./: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile  Makefile.am  Makefile.in  automated  daemon.c  hello  hello.c
src/.deps/: daemon.Po  hello.Po
